ingress/404-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: default-service
  namespace: web-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-web
  type: ClusterIP
