ingress/food-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: food-service
  namespace: web-space
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: food-web
  type: ClusterIP
