ingress/video-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: web-space
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: video-web
  type: ClusterIP
