ingress/wear-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: wear-service
  namespace: web-space
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wear-web
  type: ClusterIP
